recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:12: error: not found: value sierpienski
    sierpienski(levels-1,length/2.0)
    ^